# winnow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_aesthetic_dedupe.py  test_cli.py  test_config.py  test_dedupe.py  test_io_utils.py  test_logstore.py  test_logtools.py  test_metrics.py  test_technical.py
winnow/: __init__.py  aesthetic.py  cli.py  config.py  dedupe.py  io_utils.py  logstore.py  logtools.py  metrics.py  nima.py  technical.py
